--- a/1.html
+++ b/1.html
@@ -5,24 +5,41 @@
 <head>
 <title>WEB1 - html</title>
 <meta charset="utf-8">
+<style>
+a{
+color:BLACK;
+text-decoration: none;
+}
+
+H1{
+ font-size:60px;
+ text-align: center;
+}
+
+.saw{
+  color:gray;
+}
+
+</style>
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html" style="text-decoration:underline; color:blue; font-weight: bold;">HTML</a></li>
+  <li><a href="2.html" class="saw">CSS</a></li>
+  <li><a href="3.html" class="saw">JavaScript</a></li>
   </ol>
 
-
-
 <h2>HTML이란 무엇인가?</h2>
+
 <P>
+<center>
 <iframe width="739" height="596" src="https://www.youtube.com/embed/QHfoTRUaxVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
 </P>
 <P>
-<a href="https://tokugi.tistory.com/50" class target="_blank" title="사실 유라 각선미">HTML은 하이퍼텍스트 마크업 언어</a>(HyperText Markup Language, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.
+<a href="https://tokugi.tistory.com/50" class target="_blank" title="사실 유라 각선미" style="text-decoration:underline; color:blue;">HTML은 하이퍼텍스트 마크업 언어</a>(HyperText Markup Language, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.
 HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다.</p>
 <br>
 <center>
@@ -36,27 +53,5 @@ HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주
 </P>
 
 
-<p>
-<div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://web1-ksd7oghv9d.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
 </body>
 </html>
