--- a/2.html
+++ b/2.html
@@ -2,17 +2,52 @@
 
 <html>
 <head>
+
 <title>WEB1 - CSS</title>
+
 <meta charset="utf-8">
+
+<style>
+a {
+  text-decoration: none;
+  color:black;
+}
+
+H1{
+ font-size:60px;
+ text-align: center;
+}
+
+.saw{
+color:gray;
+}
+
+#active{
+color:blue;
+}
+
+
+</style>
+
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+
+  <h1><a href="index.html" >WEB</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html" class="saw">HTML</a></li>
+  <li><a href="2.html" class="saw" id="active" style="text-decoration:underline; font-weight: bold;">CSS</a></li>
+  <li><a href="3.html" class="saw" >JavaScript</a></li>
 </ol>
+
+<!--
+<h1><a href="index.html"><font color="red">WEB</font></a></h1>
+<ol>
+<li><a href="1.html"><font color="red">HTML</font></a></li>
+<li><a href="2.html"><font color="red">CSS</font></a></li>
+<li><a href="3.html"><font color="red">JavaScript</font></a></li>
+</ol>
+-->
 
 
 <h2>CSS란 무엇인가?</h2>
