--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
 <head>
 <title>WEB1 - html</title>
 <meta charset="utf-8">
+<style>
+a{
+color:BLACK;
+text-decoration: none;
+}
+
+H1{
+ font-size:60px;
+ text-align: center;
+}
+
+
+.saw{
+  color:gray;
+}
+
+</style>
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" style="text-decoration:underline; color:blue">WEB</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+  <li><a href="1.html" class="saw">HTML</a></li>
+  <li><a href="2.html" class="saw">CSS</a></li>
+  <li><a href="3.html" class="saw">JavaScript</a></li>
 </ol>
 
 
